empezando crud