@@ -1,15 +1,10 @@
 package ar.edu.unq.epersgeist.persistencia.DTOs.ubicacion;
 
 import ar.edu.unq.epersgeist.modelo.exception.PoligonoIncompletoException;
-import jakarta.validation.constraints.NotNull;
-import lombok.AccessLevel;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
+import lombok.*;
 
 import org.springframework.data.geo.Point;
 import jakarta.persistence.Id;
-import org.springframework.data.mongodb.core.geo.GeoJsonPoint;
 import org.springframework.data.mongodb.core.geo.GeoJsonPolygon;
 import org.springframework.data.mongodb.core.index.GeoSpatialIndexType;
 import org.springframework.data.mongodb.core.index.GeoSpatialIndexed;
@@ -17,11 +12,12 @@ import org.springframework.data.mongodb.core.mapping.Document;
 
 import java.util.List;
 
-
+@EqualsAndHashCode
 @Getter @Setter
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
-@Document(collection = "areas")
-public class AreaMongoDTO {
+@Document(collection = "poligonos")
+public class PoligonoMongoDTO {
+    @EqualsAndHashCode.Include
     @Id
     private String id;
 
@@ -30,11 +26,13 @@ public class AreaMongoDTO {
 
     private Long ubicacionId;
 
-    public AreaMongoDTO(List<Point> vertices) {
+    public PoligonoMongoDTO(Long ubicacionId, List<Point> vertices) {
         if (vertices == null || vertices.size() < 4
-                || !vertices.get(0).equals(vertices.get(vertices.size() - 1))) {
+                || !vertices.getFirst().equals(vertices.getLast())) {
             throw new PoligonoIncompletoException();
         }
+        this.ubicacionId = ubicacionId;
+
         this.poligono = new GeoJsonPolygon(vertices);
     }
 }
